# test_task

./: db.sqlite3  pyproject.toml
app/: settings.py  urls.py
app/templates/: base.html
studies/: admin.py  models.py  urls.py  views.py
studies/migrations/: 0001_initial.py  0002_rename_group_team.py
studies/templates/: detail.html  home.html  login.html  products.html
