[tool.poetry]
name = "studies"
version = "0.1.0"
description = "test task"
authors = ["Semeikin_Kirill <semeikinkirill21@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
